tests/fsharp/typecheck/sigs/neg130.4.7.bsl

neg130.fs(15,31,15,35): typecheck error FS0043: No overloads match for method 'Method'. The available overloads are shown below.
neg130.fs(15,31,15,35): typecheck error FS0043: Possible overload: 'static member X.Method : a:int64 -> int'. Type constraint mismatch. The type 
    ''t'    
is not compatible with type
    'int64'    
.
neg130.fs(15,31,15,35): typecheck error FS0043: Possible overload: 'static member X.Method : a:int -> int'. Type constraint mismatch. The type 
    ''t'    
is not compatible with type
    'int'    
.

neg130.fs(17,8,17,13): typecheck error FS0039: The value or constructor 'Test2' is not defined. Maybe you want one of the following:
   Test
   Text
